Eliminate background on narrow front page.  Temp fix until solved by applying the background only to participants on the session page.

--- a/css/caarms.scss
+++ b/css/caarms.scss
@@ -43,6 +43,12 @@ body {
 
 .path-frontpage .view-all-sessions {
 
+	.panelist-photo {
+		@media (max-width: $breakpoint) {
+			background-image: none;
+		}
+	}
+
 	.session-info-combined {
 		flex-shrink: 0;
 		background: white;
